--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-flask>=3.0.0
-ccxt>=4.3.0
-requests>=2.31.0
-numpy>=1.26.0
-gunicorn>=21.0.0
+ccxt==4.3.89
+pandas==2.2.2
+numpy==1.26.4
+requests==2.32.3
